export const TEST_IDS = {
  COUNTRY_ITEM_ID: (id: string) => `COUNTRY_ITEM_ID${id}`,
  COUNTRY_SCREEN: 'COUNTRY_SCREEN',
  COUNTRY_LIST: 'COUNTRY_LIST',
  LOADING: 'LOADING',
  ERROR_MESSAGE: 'ERROR_MESSAGE',
  SEARCH_BAR: 'SEARCH_BAR',
  SEARCH_INPUT: 'SEARCH_INPUT',
  NO_COUNTRIES_FOUND: 'NO_COUNTRIES_FOUND',
  COUNTRY_DETAIL_SCREEN: 'COUNTRY_DETAIL_SCREEN',
  POPULATION_DETAIL: 'POPULATION_DETAIL',
  AREA_DETAIL: 'AREA_DETAIL',
  COUNTRY_DETAIL_SECTION: 'COUNTRY_DETAIL_SECTION',
  BACK_BUTTON: 'BACK_BUTTON',
};
